stylesheet.less
/* ... */
.svg {
	.widget.ecomproduct .ecom-product .ecom-product-info .ecom-product-variation select, select {
		background-image: image('/images/arrow-down.svg');
	}
}

input[type="search"]::-webkit-search-decoration {
	display: none;
}

.template-footer .widget.profile .bk-profile-socialicons span {
	background-color: @color-swatch3;
	margin-right: 5px;
	a {
		background-color: @color-swatch3;
		margin: 0;
	}
}

.template-footer {
	h3 {
		border-bottom: 1px solid @borders-blocks;
		padding-bottom: 1px;
		margin-bottom: 10px;
	}
}

.widget.tweet a,
.widget.paypalbuynow .widget.button.paypal,
.widget.dropbox button {
	padding-left: 40px;
	display: inline-block;
}

// Header
.template-header {
	padding-top: 30px;
	background-color: @color-swatch7;
}

.widget.companyname {
	padding: 6px 12px 7px;
}

.widget.logo {
	text-align: center;
	float: left;
	img {
		min-width: 50px;
		margin-top: 10px;
		margin-right: 11px;
	}
}

.header-twitter {
	text-align: right;
}

.widget.feature {
	text-align: center;
	clear: both;
	h2, h3 {
		color: @color-swatch1;
		text-shadow: 0 0 10px fadeout(@color-swatch5, 50%);
		span {
			padding: 4px 15px 8px;
		}
	}
	h2 {
		margin-bottom: 10px;
	}
	h3 {
		border-bottom: none;
		span {
			padding-top: 5px;
		}
	}
}

.twitter-profile-pic {
	width: 60px;
	padding: 6px 0 0 0;
}
.widget.twitter {
	p {
		display: inline;
	}
	ul li a {
		font-weight: 600;
	}
	ul li {
		padding-bottom: 5px;
	}
}

//  Navigation
.template-nav {
	border: solid 1px @borders-blocks;
	background-color: @background-blocks;
}

.widget .extendednavigation {
	li > .text {
		padding: 0;
	}
	ul li:hover ul {
		border: solid 1px @borders-blocks;
		background-color: @background-blocks;
		border-top: 0;
		top: 55px;
		left: -1px;
		a {
			padding: 8px 20px;
		}
	}
	ul li a:hover, ul li.folder:hover > .text, ul li ul a:hover .text, ul li.folder .text:hover {
		color: @text-links-hover;
	}
	ul li.folder:hover:after {
		border-top-color: @text-links-hover;
	}
	> ul > li {
		a, &.folder {
			padding: 14px 20px 15px;
		}
		&.folder {
			padding-right: 30px;
			margin-right: 0;
			&:after {
				right: 12px;
				top: 46%;
			}
		}
	}
}

// Home
.section.main {
	padding-top: 30px;
	h3 {
		border-bottom: none;
	}
}
.widget.ecomproductslist .ecom-productslist-product {
	padding: 0;
}
.ecom-productslist-product {
	overflow: hidden;
	position: relative;
	border: 1px solid @borders-blocks;
	background-color: @background-blocks;
}
.ecom-productlist-info {
	min-height: 120px;
	padding: 16px 20px;
	h2 {
		line-height:bkscale(@font-swatch3-line-height, 0.7); 
		font-size: bkscale(@font-swatch3-font-size, 0.7);
		a {
			color: @color-swatch6;
			line-height: inherit; 
			font-size: inherit;
			-webkit-transition: .2s;
			-moz-transition: .2s;
			-ms-transition: .2s;
			transition: .2s;
		}
	}
	.ecom-productlist-price {
		font-family: @font-swatch7-font-family;
	}
}


// Page
.home-feature {
	padding-top: 30px;
}

.widget.feature .feature-bgimg .content,
.widget.feature .feature-bgimg {
	height: 360px;
}

// Footer
.widget.navigation {
	li {
		list-style: none;
	}
	ul {
		padding-left: 0;
	}
}
.template-footer {
	padding-top: 30px;
	padding-bottom: 30px;
}

// Slideshow
.widget.responsiveslideshow .slideshow-widget {
	.btn-prev, .btn-next {
		text-indent: 1000px;
		overflow: hidden;
		height: 30px;
		width: 30px;
		top: 50%;
		margin-top: -15px;
		&:before {
			content: "";
			display: block;
			border: 5px solid transparent;
			position: absolute;
			top: 10px;
			left: 11px;
			width: 0;
			height: 0;
		}
	}
	.btn-next:before {
		border-left-color: @color-swatch2;
		left: 13px;
	}
	.btn-prev:before {
		border-right-color: @color-swatch2;
		left: 6px;
	}
}

.widget.responsiveslideshow .slideshow-widget .btn-prev,
.widget.responsiveslideshow .slideshow-widget .btn-next,
.widget.responsiveslideshow .slideshow-widget .btn-play {
	background-color: fadeout(@color-swatch1, 30%);
	border-radius: 100%;
}

.widget.responsiveslideshow {
	.slideshow-widget .btn-play, .btn-prev, .btn-next {
		-webkit-transition: opacity .2s;
		-moz-transition: opacity .2s;
		-ms-transition: opacity .2s;
		transition: opacity .2s;
		opacity: .25;
	}
	&:hover {
		.slideshow-widget .btn-play, .btn-prev, .btn-next {
			opacity: .75;
			&:hover {
				opacity: 1;
			}
		}
	}
	.content-wrapper {
		background: fadeout(@color-swatch1, 25%);
		text-shadow: none;
		.title {
			font-weight: @font-swatch3-font-weight;
			&:after {
				content: ":";
			}
		}
		.title, .description {
			color: @color-swatch5;
		}
		.title {
			padding-right: 0;
			padding-left: 6px;
		}
		.description {
			padding-left: 0;
		}
	}
}

.widget.responsiveslideshow .slideshow-widget-controls .dot {
	border-radius: 100%;
	border: 1px solid @color-swatch2;
	background-color: @color-swatch1;
	box-shadow: inset 0 0 0 3px @color-swatch1;
	&.selected {
		border: 1px solid @color-swatch2;
		background: @color-swatch2;
	}
}

.widget.responsiveslideshow:hover span.btn-play,
.widget.responsiveslideshow .slideshow-widget:hover .btn-play.pause {
	&:before, &:after {
		width: 8px;
		height: 26px;
		background: @color-swatch2;
		border: 0;
		top: 27px;
		left: 28px;
	}
	&:after {
		left: 42px;
	}
}

.widget.responsiveslideshow .slideshow-widget .btn-play {
	text-indent: -99999px;
	width: 80px;
	height: 80px;
	top: 50%;
	left: 50%;
	margin-left: -40px;
	margin-top: -40px;
	&:before, &:after {
		content: "";
		display: block;
		position: absolute;
		width: 0;
		height: 0;
		border: 20px solid transparent;
		border-left-color: @color-swatch2;
		left: 32px;
		top: 31%;
		border-top-width: 15px;
		border-bottom-width: 15px;
	}
	&:hover {
		&:before, &:after {
			top: 31%;
		}
	}
}

// Menu
.menu .menu-item-image-wrap,
.blog-post-feature-image-wrap {
	height: 200px;
	background-size: cover;
	background-position: center;
	img {
		display: none;
	}
}
/* ... */

